Fixed background error on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,9 @@
   color: black;
   /* background-color: white; */
   /* background-color: #242424; */
-  background:
+  /* background:
     linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 10%),
-      #d6d9dc;
+      #d6d9dc; */
 
     background-color: #d6d9dc;
 
